--- a/GestioneOrario/app/build.gradle
+++ b/GestioneOrario/app/build.gradle
@@ -25,4 +25,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:design:23.4.0'
+    compile group: 'org.jsoup', name: 'jsoup', version: '1.9.2'
+    compile group: 'commons-lang', name: 'commons-lang', version: '2.6'
 }
