--- a/GestioneOrario/app/src/main/AndroidManifest.xml
+++ b/GestioneOrario/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name=".DataUIActivity"></activity>
+        <activity android:name=".DataUIActivity" />
+        <activity android:name=".ActivitySetting"></activity>
     </application>
 
 </manifest>
