--- a/GestioneOrario/app/src/main/AndroidManifest.xml
+++ b/GestioneOrario/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="marconi.isti.gestioneorario">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -28,7 +32,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".DataUIActivity" />
-        <activity android:name=".ActivitySetting"></activity>
+        <activity android:name=".ActivitySetting"></activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
+     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
     </application>
 
 </manifest>
