--- a/GestioneOrario/app/build.gradle
+++ b/GestioneOrario/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.android.support:design:23.4.0'
     compile group: 'org.jsoup', name: 'jsoup', version: '1.9.2'
     compile group: 'commons-lang', name: 'commons-lang', version: '2.6'
+    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
 }
