--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ android:
     - android-20
     - extra-google-google_play_services
 before_install: 
-  cd GestioneOrario
-  chmod +x gradlew
+ - cd GestioneOrario
+ - chmod +x gradlew
