--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ android:
 before_install: 
  - cd GestioneOrario
  - chmod +x gradlew
-script: ./gradlew build 
+script: ./gradlew build --stacktrace
