--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ android:
     - platform-tools
     - build-tools-23.0.3
     - android-23
+    - extra-android-m2repository
     - extra-google-google_play_services
 before_install: 
  - cd GestioneOrario
