--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: android
 android:
   components:
     - platform-tools
-    - build-tools-23.0.2
+    - tools
+    - build-tools-23.0.3
     - android-23
     - extra-android-m2repository
     - extra-google-google_play_services
