--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ android:
     - build-tools-23.0.3
     - android-23
     - extra-android-m2repository
+    - extra-google-m2repository
     - extra-google-google_play_services
 before_install: 
  - cd GestioneOrario
