--- a/GestioneOrario/app/build.gradle
+++ b/GestioneOrario/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     compile group: 'org.jsoup', name: 'jsoup', version: '1.9.2'
     compile group: 'commons-lang', name: 'commons-lang', version: '2.6'
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
+    compile 'com.android.support:cardview-v7:23.4.0'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
 }
