--- a/GestioneOrario/app/src/main/AndroidManifest.xml
+++ b/GestioneOrario/app/src/main/AndroidManifest.xml
@@ -31,7 +31,11 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name=".DataUIActivity" />
+        <activity android:name=".DataUIActivity"
+            android:theme="@style/AppTheme.NoActionBar2"
+
+
+            />
         <activity android:name=".ActivitySetting"></activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
      App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
         <meta-data
